# an_toy_code

./: .gitignore  README.md
aoc2017/1/: main.cpp
aoc2017/2/: main.cpp
aoc2017/3/: main.cpp
aoc2023/: 1.cpp  1.txt  2.cpp  3.cpp  4.cpp  5.cpp  CMakeLists.txt
boyd_applied_lin_alg/01/: exercises.jl
cs344/Problem Set 1/: CMakeLists.txt  student_func.cu
ctci/01/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  09.cpp
ctci/02/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp
optimisation/ceres/: CMakeLists.txt  helloworld.cc
path_planning/: Rrt.py  StateSpace.py  States.py  Tree.py  main.py
path_planning/StateSpace/: StateSpace.py  StateSpace2D.py  StateSpace2DObstacles.py  States.py
rust/guessing_game/: Cargo.toml
rust/guessing_game/src/: main.rs
rust/hello_cargo/: Cargo.toml
vamr/: .gitignore  README.md
vamr/exercise1/: distortPoints.m  solution.m
vamr/exercise1/code/: estimatePoseDLT.m  reprojectPoints.m  solution.m
vamr/practice/: genCube.m  poseVectorToTransformationMatrix.m  projectPoints.m  solution3.m  undistortImage.m
